--- a/homework/03.02.2025.md
+++ b/homework/03.02.2025.md
@@ -2,3 +2,7 @@
 
 ## To Learn
 - https://www.markdownguide.org/
+- https://www.youtube.com/watch?v=8JJ101D3knE
+
+## To install 
+- Git https://git-scm.com/
