Add DOM to Homework

--- a/homework/03.02.2025.md
+++ b/homework/03.02.2025.md
@@ -1,5 +1,7 @@
 ## Create a Github Account and follow the teacher
 
+## To repeat
+- DOM https://developer.mozilla.org/en-US/docs/Web/API/Document_Object_Model
 ## To Learn
 - https://www.markdownguide.org/
 - https://www.youtube.com/watch?v=8JJ101D3knE
